Small clean up changes.