@@ -34,7 +34,7 @@ public class TimeStampedObjectTest
         assertEquals("tso1", tso1.object(), "string matches");
         assertFalse("String".equals(tso1.object()), "some other string does not match payload");
         TimeStampedObject<Double> tso2 = new TimeStampedObject<Double>(12.34, timeStamp2);
-        assertEquals(tso2.object(), new Double(12.34), "payload matches");
+        assertEquals(tso2.object(), Double.valueOf(12.34), "payload matches");
         TimeStampedObject<String> tso3 = new TimeStampedObject<String>("tso1", timeStamp2);
         assertFalse(tso1.equals(tso3), "tso's with different time stamp are not equal");
         tso2 = new TimeStampedObject<Double>(12.34, timeStamp1);
